--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,17 @@
-@media (max-widt: 800px){
-  h2{
+@media (max-width: 800px) {
+  h2 {
     font-size: 2.5rem;
   }
 }
 
-body{
-   background-color: black;
-   margin: 0;
-   padding: 0;
+body {
+  background-color: black;
+  margin: 0;
+  padding: 0;
 }
 
-#navbar{
-  background-color: rgb(24, 117, 126);
+#navbar {
+  background-color: rgb(32, 134, 143);
   position: fixed;
   top: 0;
   left: 0;
@@ -20,27 +20,27 @@ body{
   justify-content: flex-end;
 }
 
-#nav-list{
+#nav-list {
   display: flex;
   flex-direction: row;
 }
 
-li{
+li {
   list-style: none;
 }
 
-a{
+a {
   color: white;
   text-decoration: none;
   font-size: 1.10em;
   padding: 1rem;
 }
 
-a:hover{
+a:hover {
   background-color: black;
 }
 
-#welcome-section{
+#welcome-section {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -49,50 +49,64 @@ a:hover{
   justify-content: center;
 }
 
-h1{
-  color: white;
-  font-size: 3rem;
-  font-weight: 500;
-  margin-top: 1.10rem;
-  line-height: 1;
-  padding-top: 10.5rem;
-  margin-bottom: 0;
-  padding-right: 60%;
-  padding-left: 0%;
-}
-h2{
-  color: white;
-  text-align: center;
-  font-size: 2rem;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
+.wrapper {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: left;
+  align-items: left;
+  margin-left: 20%;
 }
 
-h3{
+img {
+  width: 200%;
+}
+
+.content {
+  top: 10%;
+  width: 100%;
+  height: 90%;
+  left: 0%;
+  position: absolute;
+  background: rgba(0, 0, 0, 0.6);
+  text-align: center;
   color: white;
-  font-size: 2rem;
-  font-weight: 300;
-  line-height: 1;
-  padding-top: 0;
-  margin-bottom: 0;
-  padding-right: 60%;
-  padding-left: 0%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  opacity: 0;
+  transition: 0.6s;
+}
+
+h1{
+  font-size: 3rem;
+  
+}
+
+
+.content:hover {
+  opacity: 1;
+}
+
+
+h2 {
+  color: white;
+  text-align: center;
+  font-size: 3rem;
 }
 
 p{
-  color: white;
   text-align: center;
-  font-size: 1rem;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-}
-span{
-  color: rgb(24, 117, 126);
+  padding-left: 20%;
+  padding-right: 20%;
 }
 
-#welcome-section > p{
+span {
+  color: rgb(34, 149, 159);
+  text-align: center;
+}
+
+#welcome-section > p {
   color: white;
   font-size: 80%;
   font-weight: 50;
@@ -102,43 +116,22 @@ span{
   padding-top: 1.5rem;
 }
 
-.body-img{
-  border-radius: 50%;
-}
-
-.body-img{
-  position: relative;
-  top: 3%;
-  width: 10vw;
-  border-radius: 60%;
-  box-shadow: 0 0 25px var rgb(24, 117, 126);
-  cursor: pointer;
-  transition: 0.4s ease-in-out;
-  padding-left: 50%;
-  padding-top: 0%;
-  padding-bottom: 100%;
-}
-
-.body-img:hover{
-  box-shadow: 0 0 25px var rgb(24, 117, 126),
-              0 0 50px var rgb(24, 117, 126),
-              0 0 100px var rgb(24, 117, 126); 
-}
-
-.projects{
+.projects {
   margin: 0;
   padding: 8rem 2rem;
   text-align: center;
   background-color: black;
 }
 
-.project-img{
+.project-img {
   height: calc(80% - 4.8rem);
   width: 100%;
   object-fit: cover;
+  box-shadow: 10px 30px 100px rgb(24, 117, 126);
+  border-radius: 20%;
 }
 
-.project-tile{
+.project-tile {
   color: white;
   width: 100%;
   background-color: black;
@@ -146,7 +139,7 @@ span{
   padding: 2rem 0;
 }
 
-.projects-grid{
+.projects-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   grid-gap: 4rem;
@@ -154,4 +147,42 @@ span{
   max-width: 1280px;
   margin: 0 auto;
   margin-bottom: 6rem;
+}
+
+.contact h2 {
+  font-size: 2rem;
+  text-align: center;
+  color: white;
+}
+
+.contact form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1rem auto;
+  text-align: center;
+}
+
+.contact form .input-box {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.contact form .input-box input,
+.contact form textarea {
+  width: 70%;
+  padding:1rem;
+  font-size: 1.5rem;
+  color: rgb(144, 219, 227);
+  background: rgb(7, 19, 20);
+  border-radius: 2rem;
+  border: 2px solid rgb(71, 148, 154);
+  margin: 1.2rem 0;
+  resize: none;
+}
+
+.contact form .btn {
+  margin-top: 2rem;
+  background-color: rgb(71, 148, 154);
 }
