--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ li {
 a {
   color: white;
   text-decoration: none;
-  font-size: 1.10em;
+  font-size: 1.1em; /* Removed trailing zero */
   padding: 1rem;
 }
 
